--- a/style.css
+++ b/style.css
@@ -19,11 +19,14 @@ a {
 }
 
 .navbar {
+    width: 100%;
     min-height: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 24px;
+    position: fixed;
+    background-color: #3EBFFF;
 }
 
 .nav-menu {
@@ -74,7 +77,7 @@ a {
 
 .header {
     width: 100%;
-    height: 92vh;
+    height: 100vh;
     background-image: url(images/desktop/image-header.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -379,7 +382,7 @@ a {
         top: 70px;
         gap: 0;
         flex-direction: column;
-        background-color: #ffffff8c;
+        background-color: #ffffffb7;
         width: 100%;
         text-align: center;
         transition: 0.3s;
@@ -391,10 +394,20 @@ a {
 
     .nav-item {
         margin: 10px 0;
+        font-size: 1.5rem;
     }
 
     .nav-menu.active {
         left: 0;
+    }
+
+    .nav-item:hover {
+        background-color: #3EBFFF;
+    }
+    
+    .nav-item:hover a {
+        color: #ffffff;
+        font-size: 1.5rem;
     }
 }
 
